# wikicrawl

./: .gitignore  Cargo.toml  frambouase.session.sql  init.sql
.github/workflows/: rust_build.yml
src/: lib.rs  main.rs  temp.rs  wikicrawl.rs  wikipath.rs
