[package]
name = "wikicrawl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "25.0.1"
regex = "1.10.5"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
futures = "0.3.30"
signal-hook = "0.3.17"