[package]
name = "wikicrawl"
version = "0.2.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "25.0.1"
regex = "1.10.5"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
futures = "0.3.30"
log4rs = "1.3.0"
chrono = "0.4.38"
log = "0.4.22"
lazy_static = "1.5.0"
ctrlc = "3.4.5"
